[tool.poetry]
name = "mmwave-capture-std"
version = "0.1.0"
description = "**mmwave-capture-std** is a *fast*, *reliable*, and *replicable* Texas Instruments millimeter-wave capture toolkit."
authors = ["Louie Lu <git@louie.lu>"]
license = "BSD-3-Clause-Clear"
readme = "README.md"
packages = [{include = "mmwavecapture", from = "src" }]

[tool.poetry.scripts]
mmwavecapture-std = "mmwavecapture.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.3.1"
numpy = "^1.24.3"
disspcap = {git = "git@github.com:mlouielu/disspcap.git", rev = "dev"}
pyserial = "^3.5"
loguru = "^0.7.0"
pre-commit = "^3.3.2"
netifaces = "0.11.0"
toml = "^0.10.2"
pyrealsense2 = "^2.53.1.4623"
opencv-python = "^4.7.0.72"
click = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
files = ["src/mmwavecapture"]
show_error_codes = true
pretty = true
#strict = true
allow_redefinition = true
disallow_subclassing_any = true
#disallow_untyped_calls = true
#disallow_untyped_defs = true
#disallow_incomplete_defs = true
no_implicit_optional = true
local_partial_types = true
#no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
#warn_return_any = true
#warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "pytest",
    "serial",
    "loguru",
    "disspcap",
    "pyrealsense2",
    "netifaces",
]
ignore_missing_imports = true
