[project]
name = "mmwave-capture-std"
version = "0.1.0"
description = "**mmwave-capture-std** is a *fast*, *reliable*, and *replicable* Texas Instruments millimeter-wave capture toolkit."
authors = [{ name = "Louie Lu", email = "git@louie.lu" }]
requires-python = "~=3.8"
readme = "README.md"
license = "BSD-3-Clause-Clear"
dependencies = [
    "pytest>=7.3.1,<8",
    "numpy>=1.24.3,<2",
    "disspcap",
    "pyserial~=3.5",
    "loguru>=0.7.0,<0.8",
    "pre-commit>=3.3.2,<4",
    "netifaces==0.11.0",
    "toml>=0.10.2,<0.11",
    "pyrealsense2>=2.53.1.4623,<3",
    "opencv-python>=4.7.0.72,<5",
    "click>=8.1.3,<9",
    "sphinx>=7.0.1,<8",
    "furo>=2023.5.20,<2024",
    "sphinx-autobuild>=2021.3.14,<2022",
    "zstandard>=0.21.0,<0.22",
]

[project.scripts]
mmwavecapture-std = "mmwavecapture.cli:cli"

[tool.uv]

[tool.uv.sources]
disspcap = { git = "https://github.com/mlouielu/disspcap.git", rev = "dev" }

[tool.hatch.build.targets.sdist]
include = ["src/mmwavecapture"]

[tool.hatch.build.targets.wheel]
include = ["src/mmwavecapture"]

[tool.hatch.build.targets.wheel.sources]
"src/mmwavecapture" = "mmwavecapture"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.8"
files = ["src/mmwavecapture"]
show_error_codes = true
pretty = true
#strict = true
allow_redefinition = true
disallow_subclassing_any = true
#disallow_untyped_calls = true
#disallow_untyped_defs = true
#disallow_incomplete_defs = true
no_implicit_optional = true
local_partial_types = true
#no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "pytest",
    "serial",
    "loguru",
    "disspcap",
    "pyrealsense2",
    "netifaces",
    "zstandard",
]
ignore_missing_imports = true
